[package]
name = "tokio_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
tokio = { version = "1.21", features = ["rt-multi-thread", "net", "macros", "sync", "io-util"] }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
mini-redis = "0.4"
my_redis = { workspace = true }

[workspace]
resolver = "2"
members = [
    "components/my_redis",
]

[workspace.dependencies]
my_redis = {path = "components/my_redis"}