[package]
name = "tokio_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = "2.32"
tokio = { version = "1.21", features = ["full"] }
futures = { version = "0.3", features = ["thread-pool", "compat"] }
futures-executor = "0.3.1"
futures-timer = "3.0"
futures-util = { version = "0.3.1", default-features = false, features = ["io", "async-await"] }
mini-redis = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
my_redis = { workspace = true }

[workspace]
resolver = "2"
members = [
    "components/my_redis",
]

[workspace.dependencies]
my_redis = {path = "components/my_redis"}

[profile.dev]
opt-level = 0
debug = 2
codegen-units = 4
lto = false
incremental = true
panic = 'unwind'
debug-assertions = true
overflow-checks = false
rpath = false