[package]
name = "option_opeator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
myfeatures = []
myfeatures2 = []

[[test]]
name = "tests"
path = "tests/cases/mod.rs"

[dependencies]
openssl = { workspace = true }
openssl-sys = { workspace = true }
